--- a/linux/requirements-swmm.txt
+++ b/linux/requirements-swmm.txt
@@ -1,20 +1,25 @@
 #
-# requirements-appveyor.txt
+# requirements-swmm.txt - Python requirements for running nrtest
 #
-# Date Created: 3/15/2018
+# Created:  Jun 3, 2020
+# Updated:
+#
 # Author: See AUTHORS
 #
-# Useful for configuring a python environment to run swmm-nrtestsuite.
+# Useful for configuring a python environment to run nrtests on swmm.
 #
-# command: pip install -r tools/requirements-appveyor.txt
+# usage:
+#   pip install -r requirements-swmm.txt
 #
 
-aenum==2.2.6
+aenum==3.1.11
 
 nrtest==0.2.5
 
--f https://github.com/SWMM-Project/swmm-python/releases/download/v0.6.0-rc.1/swmm_toolkit-0.5.0-cp37-cp37m-linux_x86_64.whl
-swmm-toolkit==0.5.0
+# -f https://github.com/SWMM-Project/swmm-python/releases/download/v0.6.0-rc.2/swmm_toolkit-0.5.0-cp37-cp37m-win_amd64.whl
+swmm-toolkit==0.15.5
 
--f https://github.com/SWMM-Project/swmm-python/releases/download/v0.6.0-rc.1/nrtest_swmm-0.6.0-py3-none-any.whl
-nrtest-swmm==0.6.0
+# -f https://github.com/SWMM-Project/swmm-python/releases/download/v0.6.0-rc.1/nrtest_swmm-0.6.0-py3-none-any.whl
+nrtest-swmm==0.7.0
+
+setuptools==70.1.0
