--- a/windows/requirements-swmm.txt
+++ b/windows/requirements-swmm.txt
@@ -12,12 +12,14 @@
 #   pip install -r requirements-swmm.txt
 #
 
-aenum==2.2.6
+aenum==3.1.11
 
 nrtest==0.2.5
 
--f https://github.com/SWMM-Project/swmm-python/releases/download/v0.6.0-rc.2/swmm_toolkit-0.5.0-cp37-cp37m-win_amd64.whl
-swmm-toolkit==0.5.0
+# -f https://github.com/SWMM-Project/swmm-python/releases/download/v0.6.0-rc.2/swmm_toolkit-0.5.0-cp37-cp37m-win_amd64.whl
+swmm-toolkit==0.15.5
 
--f https://github.com/SWMM-Project/swmm-python/releases/download/v0.6.0-rc.1/nrtest_swmm-0.6.0-py3-none-any.whl
-nrtest-swmm==0.6.0
+# -f https://github.com/SWMM-Project/swmm-python/releases/download/v0.6.0-rc.1/nrtest_swmm-0.6.0-py3-none-any.whl
+nrtest-swmm==0.7.0
+
+setuptools==70.1.0
